[gd_scene load_steps=2 format=3 uid="uid://covcvkru51l5k"]

[ext_resource type="Script" uid="uid://dfryrq3m4c340" path="res://addons/CardGameSkeleton/Menus/PathSettingsMenu.gd" id="1_30mxb"]

[node name="PathSettingsMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_30mxb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "< Back"

[node name="ProjectPathSettings" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Project Path Settings"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MasterCardDirectory" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Master Card Directory"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PathInput" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Save"
